samples/_failures_safe/1761420944_05a4ef_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_497c4890.c: In function ‘main’:
./samples/SAFE/__tmp_497c4890.c:151:12: error: expected expression at end of input
  151 |     struct Graph* graph = createGraph(5,
      |            ^~~~~
./samples/SAFE/__tmp_497c4890.c:151:12: error: expected declaration or statement at end of input
